src/test/ui/span/issue-43927-non-ADT-derive.stderr
error: cannot determine resolution for the attribute macro `derive`
  --> $DIR/issue-43927-non-ADT-derive.rs:1:4
   |
LL | #![derive(Debug, PartialEq, Eq)] // should be an outer attribute!
   |    ^^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to previous error

